# Dextra

./: .dockerignore  Anchor.toml  Cargo.toml  Dextra (1).sol  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json
programs/dextra/: Cargo.toml
programs/dextra/src/: lib.rs
programs/freelance/: Cargo.toml
programs/freelance/src/: convert.sol  lib.rs  lib2_dextra.rs  transfer_helper.rs
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
test-experiments/: basic_test.ts  client_demo.ts  demo.ts  dextra.ts  dextra_simple_test.ts  minimal_test.ts  simple.ts  simple_demo.ts
tests/: Manually.ts  dextra.ts  freelance.ts  freelance_test.ts  masscall.ts
