[package]
name = "dextra"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "dextra"
path = "src/lib.rs"

[features]
idl-build = ["anchor-lang/idl-build",
    "anchor-spl/idl-build",]
default = ["production"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
production = []


